fixed image alignment issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3397,3 +3397,16 @@ input, select, textarea {
 		width: auto;
 	}	
 
+	.image.banner {
+		display: block;
+		margin: 0 0 2em 0;
+		width: 100%;
+	}
+
+		.image.banner img {
+			width: 100%;
+			height: 300px; /* Set a fixed height for all images */
+			object-fit: cover; /* Ensure images maintain aspect ratio and cover the given height */
+
+		}
+
